--- a/templates/rotating/detail.html
+++ b/templates/rotating/detail.html
@@ -247,13 +247,13 @@
                       <tr><td><i class="fa fa-align-justify">ID</i></td> <td>[[ rt.rtid ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Specimen Name </i></td> <td>[[ rt.sname ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Material </i></td> <td>[[ rt.mid ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Diameter </i></td> <td>[[ rt.diameter ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Moment </i></td> <td>[[ rt.moment ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Diameter(mm) </i></td> <td>[[ rt.diameter ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Moment(N.mm) </i></td> <td>[[ rt.moment ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Fatigue Life Nf </i></td> <td>[[ rt.FatigueLifeNf ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Fractured Locs </i></td> <td>[[ rt.FracturedLocs ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Speed </i></td> <td>[[ rt.speed ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> lp </i></td> <td>[[ rt.lp ]]</td></tr>
-                      <tr><td><i class="fa fa-align-justify"> Stress </i></td> <td>[[ rt.stress ]]</td></tr>
+                      <tr><td><i class="fa fa-align-justify"> Stress(MPa) </i></td> <td>[[ rt.stress ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Run Out Cycles </i></td> <td>[[ rt.runoutcycles ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Run Out Time </i></td> <td>[[ rt.runouttime ]]</td></tr>
                       <tr><td><i class="fa fa-align-justify"> Description </i></td> <td>[[ rt.description ]]</td></tr>
