--- a/templates/rotating/modify.html
+++ b/templates/rotating/modify.html
@@ -256,11 +256,11 @@
                     </option>
                     </select>
 
-                    <label for="rotating.diameter">Diameter</label>
-                    <input v-model="rotating.diameter" class="form-control" id="diameter" type="numeric">
+                    <label for="rotating.diameter">Diameter(mm)</label>
+                    <input v-model="rotating.diameter" class="form-control" id="diameter" type="numeric" @input="calLz">
 
-                    <label for="rotating.moment">Moment</label>
-                    <input v-model="rotating.moment" class="form-control" id="moment" type="numeric">
+                    <label for="rotating.moment">Moment(N.mm)</label>
+                    <input v-model="rotating.moment" class="form-control" id="moment" type="numeric" @input="calStress">
                     
                     <label for="rotating.FatigueLifeNf">Fatigue Life Nf</label>
                     <input v-model="rotating.FatigueLifeNf" class="form-control" id="FatigueLifeNf" type="numeric">
@@ -271,12 +271,14 @@
                     <label for="rotating.speed">Speed</label>
                     <input v-model="rotating.speed" class="form-control" id="speed" type="numeric">
                     
-                    <label for="rotating.lp">lp</label>
-                    <input v-model="rotating.lp" class="form-control" id="lp" type="numeric">
-                    
-                    <label for="rotating.stress">Stress</label>
-                    <input v-model="rotating.stress" class="form-control" id="stress" type="numeric">
-                    
+                    <label for="rotating.lp">lz</label><p>
+                      <!-- input v-model="rotating.lp" class="form-control" id="lp" type="numeric" -->
+                      <span>[[ rotating.lp ]]</span></p>
+                      
+                      <p><label for="rotating.stress">Stress(MPa)</label></p>
+                      <!-- input v-model="rotating.stress" class="form-control" id="stress" type="numeric" -->
+                      <p></p><span>[[ rotating.stress ]]</span></p>
+                      
                     <label for="rotating.runoutcycles">Run Out Cycles</label>
                     <input v-model="rotating.runoutcycles" class="form-control" id="runoutcycles" type="numeric">
 
@@ -437,6 +439,16 @@
             this.rotating.pic2 = "";
             this.rotating.pic3 = "";
             e.preventDefault();
+          },
+          calLz: function() {
+            console.log(this.rotating.diameter);
+            this.rotating.lp = 1/64.0*3.14159265*this.rotating.diameter*this.rotating.diameter*this.rotating.diameter*this.rotating.diameter;
+            console.log(this.rotating.lp);
+          },
+          calStress: function() {
+            if (this.rotating.lp != 0) {
+              this.rotating.stress = 1000 * .5*this.rotating.diameter*this.rotating.moment/this.rotating.lp;
+            }
           }
         },
         mounted() {
