--- a/templates/torsion/list.html
+++ b/templates/torsion/list.html
@@ -11,7 +11,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewpotrs" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="BIT Cloud Lab">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,jQuery,CSS,HTML,RWD,Dashboard">
@@ -44,7 +44,7 @@
     </script -->
   </head>
   <body class="c-app">
-    <!-- start left menu --> 
+    <!-- statrs left menu --> 
     <div class="c-sidebar c-sidebar-dark c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
       <div class="c-sidebar-brand d-lg-down-none">
         <img class="c-sidebar-brand-full" width="140" height="46" alt="CloudLab Logo" src="/assets/brand/bit-cloud-lab.png">
@@ -56,13 +56,6 @@
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
             </svg> Dashboard
-          </a>
-        </li>
-        <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="experiment/list">
-            <svg class="c-sidebar-nav-icon">
-              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> LCF
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
@@ -94,6 +87,13 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
+          <a class="c-sidebar-nav-link" href="experiment/list">
+            <svg class="c-sidebar-nav-icon">
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
+            </svg> LCF
+          </a>
+        </li>
+        <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
           <a class="c-sidebar-nav-link" href="specimen/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
@@ -110,7 +110,7 @@
         <li class="c-sidebar-nav-item">
           <a class="c-sidebar-nav-link" href="main">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-chart-pie"></use>
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-chatrs-pie"></use>
             </svg> Predict
           </a>
         </li>
@@ -176,7 +176,7 @@
               <svg class="c-icon">
                 <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-envelope-open"></use>
               </svg></a></li>
-          <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="main" role="button" aria-haspopup="true" aria-expanded="false">
+          <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="main" role="button" aria-haspopup="true" aria-vue_trsanded="false">
               <div class="c-avatar"><img class="c-avatar-img" src="/assets/img/avatars/6.jpg" alt="user@email.com"></div>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
@@ -220,63 +220,79 @@
           <!-- Breadcrumb-->
           <ol class="breadcrumb border-0 m-0">
             <li class="breadcrumb-item"><a href="main">Home</a></li>
-            <li class="breadcrumb-item active">Specimen List</li>
-            <li class="breadcrumb-item"><a href="specimen/new">New Specimen</a></li>
+            <li class="breadcrumb-item active">Torsion Test List</li>
+            <li class="breadcrumb-item"><a href="torsion/new">New Torsion Test</a></li>
             <!-- Breadcrumb Menu-->
           </ol>
         </div>
       </header>
       <!-- end header --> ]
-      <!-- start main body -->
+      <!-- statrs main body -->
       <div class="c-body">
         <main class="c-main">
           <div class="container-fluid">
             <div class="fade-in">
-              <!-- List all experiment -->
+              <!-- List all vue_trseriment -->
 
               <div class="card">
                 <div class="card-header">
-                  <i class="fa fa-align-justify"></i> Speciment List
+                  <i class="fa fa-align-justify"></i> Torsion Test List
                 </div>
                 <div class="card-body">
-                  <table id="spc_list" name="spc_list" class="table table-responsive-sm table-bordered table-striped table-sm">
+                  <table id="torsion_list" name="torsion_list" class="table table-responsive-sm table-bordered table-striped table-sm">
                     <thead>
                       <tr>
-                        <th>Id</th>
-                        <th>Name</th>
+                        <th>Detail</th>
+                        <th>Specimen Name</th>
                         <th>Material</th>
-                        <th>Radius</th>
-                        <th>Length</th>
-                        <th>Memo</th>
+                        <!-- th>Diameter</th>
+                        <th>Moment</th -->
+                        <th>Stress_Max(Mpa)</th>
+                        <th>Stress_Min(Mpa)</th>
+                        <th>Fatigue Life Nf</th>
+                        <!-- th>Fractured Locs</th>
+                        <th>Speed</th>
+                        <th>lp</th>
+                        <th>Stress</th>
+                        <th>Run out Cycles</th>
+                        <th>Run Out Time</th>
+                        <th>Desc</th>
+                        <th>Pic1</th>
+                        <th>Pic2</th>
+                        <th>Pic3</th -->
+                        <th>Repotrs</th>
                         <th>Modify</th>
                         <th>Delete</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr v-for="spc in specimens">
+                      <tr v-for="trs in torsion">
+                        <td><span class="badge badge-success"><a v-bind:href="'/torsion/detail/' + trs.torsion_id">[[ trs.torsion_id ]]</a></span></td>
+                        <td>[[ trs.sname ]]</td>
+                        <td>[[ trs.mname ]]</td>
+                        <td>[[ trs.stress ]]</td>
+                        <td>-[[ trs.stress ]]</td>
+                        <!-- td>[[ trs.diameter ]]</td>
+                        <td>[[ trs.moment ]]</td -->
+                        <td>[[ trs.FatigueLifeNf ]]</td>
+                        <!-- td>[[ trs.FracturedLocs ]]</td>
+                        <td>[[ trs.speed ]]</td>
+                        <td>[[ trs.lp ]]</td>
+                        <td>[[ trs.stress ]]</td>
+                        <td>[[ trs.runoutcycles ]]</td>
+                        <td>[[ trs.runouttime ]]</td>
+                        <td>[[ trs.description ]]</td>
+                        <td><img v-bind:src="[[ trs.pic1 ]]"></td>
+                        <td><img v-bind:src="[[ trs.pic2 ]]"></td>
+                        <td><img v-bind:src="[[ trs.pic3 ]]"></td -->
                         <td>
-                          [[ spc.sid ]]
+                          <span class="badge badge-warning"><a href="/torsion/list">R</a></span>
                         </td>
                         <td>
-                          [[ spc.sname ]]
+                          <span class="badge badge-warning"><a v-bind:href="'/torsion/modify/' + trs.torsion_id">M</a></span>
                         </td>
                         <td>
-                          [[ spc.mname ]]
-                        </td>
-                        <td>
-                          [[ spc.radius ]]
-                        </td>
-                        <td>
-                          [[ spc.length ]]
-                        </td>
-                        <td>
-                          [[ spc.memo ]]
-                        </td>
-                        <td>
-                          <span class="badge badge-warning"><a v-bind:href="'/specimen/modify/' + spc.sid">M</a></span>
-                        </td>
-                        <td>
-                          <button class="badge badge-secondary" @click="confirmDelete(spc.sid)">D</button>
+                          <button class="badge badge-secondary" @click="confirmDelete(trs.torsion_id)">D</button>
                         </td>
                       </tr>
                     </tbody>
@@ -306,27 +322,27 @@
     <script src="/vendors/@coreui/icons/js/svgxuse.min.js"></script>
     <!--<![endif]-->
     <!-- Plugins and scripts required by this view-->
-    <script src="/vendors/@coreui/chartjs/js/coreui-chartjs.bundle.js"></script>
+    <!-- script src="/vendors/@coreui/chatrsjs/js/coreui-chatrsjs.bundle.js"></script -->
     <script src="/vendors/@coreui/utils/js/coreui-utils.js"></script>
 
     <script type="text/javascript" language="JavaScript">
-      var exp = new Vue({
-        el: "#spc_list",
+      var vue_trs = new Vue({
+        el: "#torsion_list",
         data: {
-          specimens: []
+          torsion: []
         },
         methods: {
-          confirmDelete: function(sid) {
-            if (confirm('Are you sure?\nPress OK will delete the specimen! If you do not want to delte, press Cancel please!\nFor testing, Please delete your own test case, do not delete the original data, thank you!')) {
+          confirmDelete: function(torsion_id) {
+            if (confirm('Are you sure?\nPress OK will delete the test! If you do not want to delte, press Cancel please!\nFor testing, Please delete your own test case, do not delete the original data, thank you!')) {
               axios
-              .get('/delspc/' + sid)
+              .get('/deltrs/' + torsion_id)
               .then(res => {
                 // console.log(res.data);
                 if (res.data.message == "ok") {
-                  alert("the speicimen (id = " + sid + ") was deteleted");
+                  alert("the torsion test (id = " + torsion_id + ") was deteleted");
                   window.location.reload(true);
                 } else {
-                  alert("An error was occured!");
+                  aletrs("An error was occured!");
                 }
               })
               .catch(err => {
@@ -338,10 +354,10 @@
         mounted() {
           // verify_token();
           axios
-          .get('/vspecimen')
+          .get('/vtorsion')
           .then(res => {
-            this.specimens = res.data;
-            // console.log(res.data);
+            this.torsion = res.data;
+            console.log(res.data);
           })
           .catch(err => {
             console.log(err);
